--- a/frontend/src/ui/styles/index.scss
+++ b/frontend/src/ui/styles/index.scss
@@ -2,6 +2,7 @@
 
 @use "components/navbar";
 @use "components/footer";
+@use "components/table_utils";
 @use "components/game_records_table";
 @use "components/game_events_table";
 @use "components/players_table";
