--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -719,6 +719,69 @@ game-event-view #card #content img {
   border-radius: 10px;
 }
 
+search-view form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 25px;
+  font-size: 1.15rem;
+  margin-top: 30px;
+}
+search-view form button {
+  width: max-content;
+  margin-top: 10px;
+  padding: 7px 10px;
+  font-size: 1.1rem;
+  border-radius: 0.3rem;
+  border: 1px solid gray;
+}
+search-view form fieldset {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 20px;
+  border: 0;
+}
+search-view form fieldset label {
+  height: 10px;
+  padding-left: 1px;
+}
+search-view form fieldset input,
+search-view form fieldset select {
+  height: 35px;
+  width: 290px;
+  font-size: 1.1rem;
+  border-radius: 0.3rem;
+  border: 1px solid gray;
+}
+search-view form fieldset input:focus-visible,
+search-view form fieldset select:focus-visible {
+  outline: #0000cc solid 1.5px;
+}
+search-view form fieldset input {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+search-view form fieldset input[type=file] {
+  border: 0;
+  padding-left: 1px;
+}
+search-view form fieldset select {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+search-view form fieldset div.multi-select {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 10px;
+}
+search-view button {
+  width: max-content;
+  margin-top: 10px;
+  padding: 7px 10px;
+  font-size: 1.1rem;
+  border-radius: 0.3rem;
+  border: 1px solid gray;
+}
+
 unknown-view {
   display: flex;
   justify-content: center;
