--- a/frontend/src/ui/styles/index.scss
+++ b/frontend/src/ui/styles/index.scss
@@ -13,6 +13,7 @@
 @use "views/players_view";
 @use "views/game_record_view";
 @use "views/game_event_view";
+@use "views/search_view";
 @use "views/unknown_view";
 
 @use "views/admin_view";
