--- a/frontend/src/ui/styles/views/new_player_view.scss
+++ b/frontend/src/ui/styles/views/new_player_view.scss
@@ -1,8 +1,8 @@
-@use "admin_view" as av;
+@use "../components/form_utils" as fu;
 
 new-player-view {
-  @include av.form;
-  @include av.formReturnMsg;
+  @include fu.form;
+  @include fu.formReturnMsg;
 
   img#preview {
     max-width: 120px;
