--- a/frontend/src/ui/styles/views/search_view.scss
+++ b/frontend/src/ui/styles/views/search_view.scss
@@ -1,6 +1,9 @@
 @use "../components/form_utils" as fu;
 
 search-view {
-   @include fu.form; 
-   @include fu.formButton; 
+  display: grid;
+  justify-items: center;
+
+  @include fu.form;
+  @include fu.formButton;
 }
