--- a/frontend/src/ui/styles/components/navbar.scss
+++ b/frontend/src/ui/styles/components/navbar.scss
@@ -7,6 +7,7 @@ header {
   font-size: 1.1rem;
 
   padding-left: g.$mainPaddingLeft;
+  padding-right: g.$mainPaddingLeft;
   padding-top: 10px;
 
   nav-bar {
