--- a/frontend/src/ui/styles/components/table_utils.scss
+++ b/frontend/src/ui/styles/components/table_utils.scss
@@ -113,8 +113,9 @@ $pictureWidth: 70px;
   }
 }
 
-$refWidth: 30px;
-$eloWidth: 60px;
+$playerNameWidth: 75px;
+$refWidth: 15px;
+$eloWidth: 30px;
 $eloDeltaWidth: 40px;
 $dateWidth: 110px;
 $handicapWidth: 40px;
