--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -32,8 +32,8 @@ main {
   max-width: 1200px;
   margin: auto;
   padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-bottom: 20px;
 }
 
@@ -176,7 +176,7 @@ game-records-table #legend {
 game-records-table route-link.card,
 game-records-table #legend {
   display: grid;
-  grid-template-columns: 30px 70px 85px 60px 40px 60px 40px 70px 85px 60px 60px 40px 90px 110px 100px;
+  grid-template-columns: 15px 70px 75px 60px 40px 30px 40px 70px 75px 60px 30px 40px 90px 110px 100px;
   grid-template-areas: "ref" "black-pic black country-flags handicapWidth elo-black elo-delta-black" "white-pic white country-flags elo-white elo-delta-white" "result date event";
   grid-column-gap: 10px;
 }
@@ -187,15 +187,10 @@ game-records-table route-link.card[player-loses] {
   background-color: #ffe6e6;
 }
 
-@media (max-width: 1200px) {
-  players-table .non-mobile {
-    display: none !important;
-  }
-}
 players-table route-link.card,
 players-table #legend {
   display: grid;
-  grid-template-columns: 30px 70px 100px 40px 60px 45px;
+  grid-template-columns: 15px 70px 75px 40px 30px 35px 100px 65px;
   grid-column-gap: 10px;
 }
 players-table span:not(.align-left) {
@@ -296,11 +291,22 @@ players-table #legend {
   margin-bottom: 10px;
   font-weight: bold;
 }
+@media (max-width: 1200px) {
+  players-table route-link.card,
+players-table #legend {
+    display: grid;
+    grid-template-columns: 15px 70px 75px 40px 30px 35px;
+    grid-column-gap: 10px;
+  }
+  players-table .non-mobile {
+    display: none !important;
+  }
+}
 
 game-events-table route-link.card,
 game-events-table #legend {
   display: grid;
-  grid-template-columns: 30px 170px 75px 65px 90px 90px;
+  grid-template-columns: 15px 170px 75px 65px 90px 90px;
   grid-template-areas: "ref name type total-games";
   grid-column-gap: 10px;
 }
@@ -558,10 +564,12 @@ player-view #player-personal-card #player-personal-card-legend {
   padding: 10px 10px;
 }
 
-players-view {
-  display: flex;
-  justify-items: center;
-  justify-content: center;
+@media (min-width: 1200px) {
+  players-view {
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+  }
 }
 
 game-record-view {
@@ -623,7 +631,7 @@ game-record-view #card .align-left {
 }
 game-record-view #card #legend {
   display: grid;
-  grid-template-columns: 40px 60px 40px 110px 90px 100px 100px 60px 40px;
+  grid-template-columns: 40px 30px 40px 110px 90px 100px 100px 30px 40px;
   grid-column-gap: 10px;
   justify-items: center;
   align-items: center;
@@ -633,7 +641,7 @@ game-record-view #card #legend {
 }
 game-record-view #card #content {
   display: grid;
-  grid-template-columns: 40px 60px 40px 110px 90px 100px 100px 60px 40px;
+  grid-template-columns: 40px 30px 40px 110px 90px 100px 100px 30px 40px;
   grid-column-gap: 10px;
   justify-items: center;
   margin-bottom: 35px;
