--- a/frontend/src/ui/styles/views/players_view.scss
+++ b/frontend/src/ui/styles/views/players_view.scss
@@ -1,5 +1,7 @@
 players-view {
+  @media (min-width: 1200px) {
     display: flex;
     justify-items: center;
     justify-content: center;
+  }
 }
