--- a/frontend/src/ui/styles/components/table_utils.scss
+++ b/frontend/src/ui/styles/components/table_utils.scss
@@ -1,3 +1,5 @@
+@use "../globals.scss" as g;
+
 @mixin cardDecoration {
   background: whitesmoke;
 
@@ -177,4 +179,10 @@ $columnGap: 10px;
   @include pagination;
   @include loaderContainer;
   @include completeCardLegendDecoration;
+
+  @media (max-width: g.$desktopWidth) {
+    .non-mobile {
+      display: none !important;
+    }
+  }
 }
