--- a/frontend/src/ui/styles/globals.scss
+++ b/frontend/src/ui/styles/globals.scss
@@ -2,6 +2,7 @@ $bgColor: #d7d7d7;
 $lightFontColor: #f9f9f9;
 $mainPaddingLeft: 15px;
 $mainPaddingTop: 20px;
+$desktopWidth: 1200px;
 
 *,
 ::after,
@@ -37,7 +38,7 @@ route-link:hover {
 }
 
 main {
-  max-width: 1200px;
+  max-width: $desktopWidth;
 
   margin: auto;
 
