--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -431,14 +431,21 @@ game-events-table #legend {
 about-view {
   display: flex;
   flex-direction: column;
-  max-width: 650px;
+  max-width: 600px;
+}
+@media (max-width: 600px) {
+  about-view {
+    max-width: 100vw;
+  }
 }
 about-view h1 {
   margin-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 about-view ol {
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 about-view ol li::marker {
   font-size: 1.2rem;
@@ -455,7 +462,7 @@ about-view ol p {
   margin-bottom: 15px;
 }
 about-view ol table {
-  padding-left: 30px;
+  padding-left: 20px;
   padding-right: 40px;
   border-spacing: 0;
   border-collapse: separate;
