--- a/frontend/src/ui/styles/views/about_view.scss
+++ b/frontend/src/ui/styles/views/about_view.scss
@@ -2,15 +2,22 @@ about-view {
   display: flex;
   flex-direction: column;
 
-  max-width: 650px;
+  max-width: 600px;
+
+  @media (max-width: 600px) {
+    max-width: 100vw;
+  }
 
   h1 {
     margin-bottom: 20px;
+
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   ol {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 45px;
+    padding-right: 45px;
 
     $liFontSize: 1.4rem;
 
@@ -33,7 +40,7 @@ about-view {
     }
 
     table {
-      padding-left: 30px;
+      padding-left: 20px;
       padding-right: 40px;
       border-spacing: 0;
       border-collapse: separate;
